@@ -1,8 +1,10 @@
 == Firebug Lite Change Log ==
 
 2009-04-19 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
-  * firebug-lite.js: Issue 1658: FB Lite HTML view body tag occasionally has multiple + signs
-                     Simplified discovery of body tag in HTML tree
+  * firebug-lite.js Fixed multiple issues with the HTML Tree:
+      o Issue 1658: FB Lite HTML view body tag occasionally has multiple + signs
+      o Issue 1659: FB Lite stops parsing childnodes when it reaches HTML comments
+      o Simplified discovery of body tag
 
 2009-04-16 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
   * firebug-lite.js: Issue 1653: Removed reliability on firebug.liteFilename
